# rs-git-log2arrow-ipc-stream

./: Cargo.toml  README.md  build.sh  example.sh  git-log2arrow-ipc-stream
src/: lib.rs
